Build 43
- Fly units can't "stand" above buildings structures
- Show attack cursor when mouse placed on enemy unit
- Tactical AI: Attack enemy unit when it moved inside seeing range
- Tactical AI: Damage tolerance now works
- Tactical AI: basic actions when unit under attack
- Bugfix: weapon location fix when unit teleported
- Bugfix: bridge construction fixed
- Some code refactoring and optimizations

Build 42 (28.06.2013)
- Bugfix: Fog of war fix during unit teleport
- Bugfix: Unit couldn't enter invader transport
- Bugfix: demolishing Temporal gate during charge sate
- Bugfix: minimap fog error when unit moves near right side
- Bugfix: Fog drawing function rewritten to allow correct fog display on right and bottom edges
- Bugfix: do not select unit/building if it positioned under the fog
- Units and buildings of other players now colored differently
- Game basic parameters can be configured throw config object
- Added damage animation for all units
- Added units without weapons: Shredder, Hostage Taker, Water Contaminator
- Added Infiltrator unit (without spy abilities)

Build 41 (14.06.2013)
- Added level select screen
- Added game archive
- Game require browser to support WebM video

Build 40 (05.06.2013)
- Added "Orders" tab to right panel
- Tactical AI: Cyclone flies to Rearming deck when have no ammo
- Tactical AI: weapon maximal range check moved to tactical AI
- Implemented weapon's minimal attack range
- First implementation of the fog of war
- Starting this build you can not run game just from local folder, you should set up virtual domain or upload it to remote computer.
- Water display switcher are now clickable
- Start working on game menu (level select menu)
- Code refactoring

Build 39 (17.05.2013)
- Sky Fortress now have correct fire delay and weapon state display
- Added damage area for all weapons
- Added persistent damage for S.C.A.R.A.B. weapon
- Font class optimizations
- Bug fixes
- Bullet speed corrected
- Unit speed corrected