@@ -1,7 +1,7 @@
 To do:
-	- Add simple unit Tactic AI responses
 	- Implement unit rotation
 	- Allow unit to shoot not only to the center of the building
+	- Bug: when ordering scouted unit it don't stop scout
 	
 
 - High priority bugs:
